--- a/package.json
+++ b/package.json
@@ -34,17 +34,22 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "file-loader": "^5.0.2",
+    "fontforge": "0.0.4",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "7.0.0",
     "gulp-clean-css": "4.2.0",
+    "gulp-font": "^1.0.4",
+    "gulp-fontgen": "^0.2.5",
     "gulp-header": "2.0.9",
     "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
+    "gulp-pxtorem": "^3.0.0",
     "gulp-rename": "1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "3.0.2",
+    "gulp-webfont": "0.0.1-4",
     "html-webpack-plugin": "^3.2.0",
     "merge-stream": "2.0.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -57,6 +62,7 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.1.2",
     "terser-webpack-plugin": "^2.3.5",
+    "ttfautohint": "^1.3.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
