--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "eslint-plugin-prettier": "^3.1.2",
     "file-loader": "^5.0.2",
     "fontforge": "0.0.4",
+    "gsap": "^3.6.1",
     "gulp": "4.0.2",
+    "fullpage.js": "2.9.4",
     "gulp-autoprefixer": "7.0.0",
     "gulp-clean-css": "4.2.0",
     "gulp-font": "^1.0.4",
@@ -60,7 +62,9 @@
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.3",
     "sass-loader": "^8.0.0",
+    "scrollmagic": "^2.0.8",
     "style-loader": "^1.1.2",
+    "swiper": "^6.5.0",
     "terser-webpack-plugin": "^2.3.5",
     "ttfautohint": "^1.3.0",
     "url-loader": "^3.0.0",
