--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "eslint-plugin-prettier": "^3.1.2",
     "file-loader": "^5.0.2",
     "fontforge": "0.0.4",
+    "fullpage.js": "^2.9.6",
     "gsap": "^3.6.1",
     "gulp": "4.0.2",
-    "fullpage.js": "2.9.4",
     "gulp-autoprefixer": "7.0.0",
     "gulp-clean-css": "4.2.0",
     "gulp-font": "^1.0.4",
