--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "@pqina/flip": "^1.7.7",
     "autoprefixer": "^9.8.0",
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
